CHANGES for LIRE
================

2013-08-07
==========
  - Changed CEDD internal data handling from double to bytes
  - Changed OpponentHistogram internal data handling from double to bytes

2013-08-03
==========
  - Adjusted TestUCID to new, faster searcher implementation.
  - Release 0.9.4 beta_2

2013-08-02
==========
  - Changed quantization & serialization of PHOG (smaller feature, half the size)
  - Changed quantization of JCD for support of RLE with zero values (~56% less space)
  - Fixed some debug code in HashingIndexor.
  - Caught a division by zero in ParallelExtractor

2013-08-01
==========
  - Added fast & dirty search method to BitSamplingImageSearcher.

2013-07-22
==========
  - Fixed concurrency bug in FCTH & CEDD, eliminated therefore in JCD too.

2013-07-17
==========
  - Fixed serialization bugs and quantization bugs in several classes
  - Added a module test for that in TestGeneral
  - Found a concurrency issue in CEDD and therefore too in JCD.

2013-07-17
==========
  - Removed the use of GZip Streams in Extractor and Indexor. It tended to mess up things.
  - Added a fail-safe check for RBG images & non 8-bit-per-pixel images to OpponentHistogram,
    CEDD, EdgeHistogram, ColorLayout, FCTH, JCD, JointHistogram.

2013-07-17
==========
  - Fixed bug in EdgeHistogram Extraction.
  - Added new test to find bugs in TestGeneral

2013-07-16
==========
  - Fixed bug in JCD serialization.

2013-07-12
==========
  - deprecated DocumentFactory
  - Added forceMerge(1) to LocalFeatureHistogramBuilder (as reported to be needed by
    James Charters, me@jamescharters.info)
  - Set parallel k-means as default in LocalFeatureHistogramBuilder

2013-07-11
==========
  - Added name and field name methods to LireFeature interface to simplify creation of builders and searchers.
  - Updated GenericDocumentBuilder and GenericFastImageSearcher to reflect the changes
  - Updated documentation in several classes
  - deprecated GenericImageSearcher